--- a/templates/about.html
+++ b/templates/about.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About - Tyler Nielson</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="http://www.w3schools.com/lib/w3.css" rel="stylesheet">
-    <link href="static/css/style.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -26,11 +26,6 @@
         div.gallery img {
             width: 100%;
             height: auto;
-        }
-
-        div.desc {
-            padding: 15px;
-            text-align: center;
         }
 
         * {
@@ -56,7 +51,7 @@
             </ul>
         </div>
 
-        <header class="parallax-2 w3-display-container" id="home">
+        <header class="parallax-3 w3-display-container" id="home">
             <div class="w3-display-middle w3-padding-large w3-text-white w3-animate-opacity w3-center" style="background-color:rgba(0,0,0, 0.5);">
                 <h1 class="title w3-hide-medium w3-hide-small w3-xxxlarge" style=font-family:'Ubuntu',sans-serif;><b>ABOUT ME</b></h1>
                 <h5 class="w3-hide-large" style="white-space:nowrap;" style=font-family:'Ubuntu',sans-serif;><b>ABOUT ME</b></h5>
@@ -122,6 +117,20 @@
             <p>We moved to Kansas shortly before my 12th birthday. My dad had already been down here working at his new job, so we had a house that was ready for us when we got here. "Ready" as in, we had one,
                 sans furniture. The movers followed us down and we had our furniture from Iowa here in a matter of a few days. Let the unpacking begin! (Speaking of, I'm 90% sure there's still boxes that are
                 packed away in the basement...)</p>
+            <p>My experiences here in Kansas were very very different from what I knew in Iowa. I actually had a neighborhood full of kids my age to hang out with here. I met one of my best friends, Andrew Wesp,
+               very early on in my time living here. After six very uneventful years attending middle and high school, I graduated and spent the summer working at Jimmy John's in preparation for the college life.
+               I chose very quickly to attend Kansas State because of the awesome scholarship opportunity they offered me. I mean, who can pass up money for school when it's so expensive?! I began my college
+               career as a Computer Engineering major, since I enjoyed working with computers. Little did I know that this meant hardware too, which I did not enjoy working with. I took my first programming class
+               my second semester Freshman year and loved it. It clicked very quickly with me, and I could see the end results in the programs that I wrote. Why wouldn't I love it?
+               I tried to stick it out with Computer Engineering into my sophomore year, but that quickly fell apart. I was enrolled in my first higher level hardware class and I HATED it. Our first assignment
+               was to draw a 4x4 Booth Multiplier Circuit. I don't think I've ever left a classroom faster. I marched myself on down to my advisor's office, where he advised me to switch majors to Software
+               Engineering, where I've been ever since.</p>
+            <h4>The Current Years</h4>
+            <p>As I mentioned earlier, I am a senior who is only 21 credits away from graduation. But let's take a step away from that and talk about something other than school. I'm sure you saw the pictures above
+               this loooonnng write up and saw that all four of them involve soccer and Sporting KC. I'm a huge soccer fan and you can find me spending a lot of my free time watching or reading about soccer.
+               Along with soccer, I really enjoy playing video games in my free time. I don't quite have as much time anymore to play, but when I do, it's usually Overwatch, anything Legend of Zelda, or Fifa
+               (go figure...). In general, I'm a pretty simple person. I like to spend time with friends and family, especially the pretty lady in the first two pictures, play video games, watch/read/play soccer
+               and code. This website is really the first big project I've taken on and I've enjoyed it thoroughly. If you have any comments or would just like to reach out, contact me <a href="contact.html">here.</a></p>
         </div>
 
         <div class="w3-content w3-container w3-center">
