--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Home - Tyler Nielson</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
         <link href="http://www.w3schools.com/lib/w3.css" rel="stylesheet">
-        <link href="static/css/style.css" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -17,14 +17,25 @@
     </head>
     <body>
 
-        <!-- Navbar -->
-        <div class="w3-top" style="color:white">
+        <!-- Navbar (Large Screens) -->
+        <div class="w3-top w3-hide-small" style="color:white">
             <ul class="w3-navbar" id="myNav">
-                <li><a href="#" class="w3-padding-large">HOME</a></li>
-                <li class="w3-hide-small"><a href="about.html" class="w3-padding-large">ABOUT ME</a></li>
-                <li class="w3-hide-small"><a href="resume.html" class="w3-padding-large">RESUME</a></li>
-                <li class="w3-hide-small"><a href="blog.html" class="w3-padding-large">BLOG</a></li>
-                <li class="w3-hide-small"><a href="contact.html" class="w3-padding-large">CONTACT</a></li>
+                <li><a href="index.html" class="w3-padding-large">HOME</a></li>
+                <li><a href="about.html" class="w3-padding-large">ABOUT ME</a></li>
+                <li><a href="resume.html" class="w3-padding-large">RESUME</a></li>
+                <li><a href="blog.html" class="w3-padding-large">BLOG</a></li>
+                <li><a href="contact.html" class="w3-padding-large">CONTACT</a></li>
+            </ul>
+        </div>
+
+        <!-- Navbar (Small Screens) -->
+        <div class="w3-top w3-hide-large w3-hide-medium" style="color:white">
+            <ul class="w3-navbar" id="myNavSmall">
+                <li><a href="index.html" class="w3-padding-large">HOME</a></li>
+                <li><a href="about.html" class="w3-padding-large">ABOUT ME</a></li>
+                <li><a href="resume.html" class="w3-padding-large">RESUME</a></li>
+                <li><a href="blog.html" class="w3-padding-large">BLOG</a></li>
+                <li><a href="contact.html" class="w3-padding-large">CONTACT</a></li>
             </ul>
         </div>
 
