--- a/templates/resume.html
+++ b/templates/resume.html
@@ -16,7 +16,7 @@
     <!-- ===========================
     SITE TITLE
     =========================== -->
-    <title>Resume</title>
+    <title>Resume - Tyler Nielson</title>
 
     <!-- ===========================
     FAVICONS
@@ -43,9 +43,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About - Tyler Nielson</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="http://www.w3schools.com/lib/w3.css" rel="stylesheet">
-    <link href="static/css/style.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"> -->
@@ -68,54 +68,63 @@
     <![endif]-->
 </head>
 <body>
-<div class="container">
+
     <!-- ===========================
     HEADER
     ============================ -->
     <!-- Navbar -->
-    <div class="w3-top" style="color:white">
+
+    <div class="w3-top-static" style="color:black">
         <ul class="w3-navbar" id="myNav">
-            <li><a href="#" class="w3-padding-large">HOME</a></li>
+            <li><a href="index.html" class="w3-padding-large">HOME</a></li>
             <li class="w3-hide-small"><a href="about.html" class="w3-padding-large">ABOUT ME</a></li>
-            <li class="w3-hide-small"><a href="resume.html" class="w3-padding-large">RESUME</a></li>
+            <li class="w3-hide-small w3-disabled"><a href="resume.html" class="w3-padding-large">RESUME</a></li>
             <li class="w3-hide-small"><a href="blog.html" class="w3-padding-large">BLOG</a></li>
             <li class="w3-hide-small"><a href="contact.html" class="w3-padding-large">CONTACT</a></li>
         </ul>
     </div>
 
-    <!-- Nameplate -->
-    <!--<header class="parallax-1 w3-display-container" id="home">-->
-        <!--<div class="w3-display-middle w3-padding-large w3-text-white w3-animate-opacity w3-center" style="background-color:rgba(0,0,0, 0.5);">-->
-            <!--<h1 class="title w3-hide-medium w3-hide-small w3-xxxlarge" style=font-family:'Ubuntu',sans-serif;><b>TYLER NIELSON</b></h1>-->
-            <!--<h3 class="title w3-hide-medium w3-hide-small" style=font-family:'Ubuntu',sans-serif;>SOFTWARE ENGINEER</h3>-->
-            <!--<h4 class="title w3-hide-medium w3-hide-small" style=font-family:'Ubuntu',sans-serif;>STUDENT</h4>-->
-            <!--<h5 class="w3-hide-large" style="white-space:nowrap;" style=font-family:'Ubuntu',sans-serif;><b>TYLER NIELSON</b></h5>-->
-        <!--</div>-->
-    <!--</header>-->
-            <!-- ===========================
-            SOCIAL & CONTACT
-            ============================ -->
+    <header class="parallax-4 w3-display-container" id="home">
+        <div class="w3-display-middle w3-padding-large w3-text-white w3-animate-opacity w3-center" style="background-color:rgba(0,0,0, 0.5);">
+            <h1 class="title w3-hide-medium w3-hide-small w3-xxxlarge" style=font-family:'Ubuntu',sans-serif;><b>RESUME</b></h1>
+            <h5 class="w3-hide-large" style="white-space:nowrap;" style=font-family:'Ubuntu',sans-serif;><b>RESUME</b></h5>
+        </div>
+    </header>
+    <!--<div class="container">-->
+    <!--&lt;!&ndash; Nameplate &ndash;&gt;-->
+    <!--&lt;!&ndash;<header class="parallax-1 w3-display-container" id="home">&ndash;&gt;-->
+        <!--&lt;!&ndash;<div class="w3-display-middle w3-padding-large w3-text-white w3-animate-opacity w3-center" style="background-color:rgba(0,0,0, 0.5);">&ndash;&gt;-->
+            <!--&lt;!&ndash;<h1 class="title w3-hide-medium w3-hide-small w3-xxxlarge" style=font-family:'Ubuntu',sans-serif;><b>TYLER NIELSON</b></h1>&ndash;&gt;-->
+            <!--&lt;!&ndash;<h3 class="title w3-hide-medium w3-hide-small" style=font-family:'Ubuntu',sans-serif;>SOFTWARE ENGINEER</h3>&ndash;&gt;-->
+            <!--&lt;!&ndash;<h4 class="title w3-hide-medium w3-hide-small" style=font-family:'Ubuntu',sans-serif;>STUDENT</h4>&ndash;&gt;-->
+            <!--&lt;!&ndash;<h5 class="w3-hide-large" style="white-space:nowrap;" style=font-family:'Ubuntu',sans-serif;><b>TYLER NIELSON</b></h5>&ndash;&gt;-->
+        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+    <!--&lt;!&ndash;</header>&ndash;&gt;-->
+            <!--&lt;!&ndash; ===========================-->
+            <!--SOCIAL & CONTACT-->
+            <!--============================ &ndash;&gt;-->
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-2">
                     <ul class="list-unstyled">
-                        <li><a href="http://www.RyanPaulWilliams.com"><span class="social fa fa-home"></span>RyanPaulWilliams.com</a>
+                        <li><a href="http://tylernielson.net"><span class="social fa fa-home"></span>TylerNielson.com</a>
                         </li>
-                        <li><a href="mailto:rpwilliams96@gmail.com.com"><span class="social fa fa-envelope-o"></span>rpwilliams96@gmail.com</a>
+                        <li><a href="mailto:tyler.snielson@gmail.com.com"><span class="social fa fa-envelope-o"></span>tyler.snielson@gmail.com</a>
                         </li>
+                        <li><a href="#"><span class="social fa fa-file-text"></span>Link to full resume</a></li>
                     </ul>
                 </div><!-- social 1st col end-->
-                <div class="col-sm-4">
+                <div class="col-sm-offset-2">
                     <ul class="list-unstyled">
-                        <li><a href="https://www.github.com/rpwilliams"><span class="social fa fa-github"></span>Github</a>
+                        <li><a href="https://www.github.com/tylernielson1"><span class="social fa fa-github"></span>Github</a>
                         </li>
-                        <li><a href="https://www.linkedin.com/in/rpwilliams96"><span class="social fa fa-linkedin"></span>Linkedin</a>
+                        <li><a href="https://www.linkedin.com/in/tyler-nielson-a37143106"><span class="social fa fa-linkedin"></span>Linkedin</a>
                         </li>
                     </ul>
                 </div><!-- social 2nd col end-->
-            </div><!-- header social end-->
-        </div><!-- header right end-->
-    </div><!-- header end-->
-    <hr class="firsthr">
+            </div>
+        <!--</div>&lt;!&ndash; header right end&ndash;&gt;-->
+    <!--</div>&lt;!&ndash; header end&ndash;&gt;-->
+    <!--<hr class="firsthr">-->
     <!-- ===========================
     BODY LEFT PART
     ============================ -->
@@ -128,28 +137,14 @@
                 <h3>Education</h3>
                 <div class="row">
                     <div class="col-md-9">
-                        <h4>B.S. in Computer Science</h4>
+                        <h4>B.S. in Software Engineering</h4>
                         <p class="sub"><a href="http://www.ksu.edu/">Kansas State University</a>
                         </p>
                     </div>
                     <div class="year col-md-3">
-                        <p><b>Expected:<br>May 2018</br></b><br><i>GPA: 3.66</i></br></p>
+                        <p><b>Expected:<br>May 2018</br></b><br><i>GPA: 3.64</i></br></p>
                     </div>
                 </div><!--Education & Certification 1 end-->
-
-                <hr>
-
-                <div class="row">
-                    <div class="col-md-9">
-                        <h4>Programming Mobile Applications for Android Handheld Systems: Part 1</h4>
-                        <p class="sub"><a href="https://www.coursera.org/account/accomplishments/verify/A4XTRCA6PL">Coursera Verified Certificate via the University of Maryland</a>
-                        </p>
-                        <p>License A4XTRCA6PL</p>
-                    </div>
-                    <div class="year col-md-3">
-                        <p>July 2015</p>
-                    </div>
-                </div><!--Education & Certification 2 end-->
             </div>
         </div><!--Education & Certifications end-->
 
@@ -165,17 +160,16 @@
                 <h3>Job Experience</h3>
                 <div class="row">
                     <div class="col-md-9">
-                        <h4>SAS Tutor, "C Programming for Engineers"​</h4>
-                        <p class="sub"><a href="http://www.k-state.edu">Kansas State University</a>
+                        <h4>Software Engineer Intern​</h4>
+                        <p class="sub"><a href="https://www.garmin.com">Garmin International</a>
                         </p>
                         <p>
-                        <ul> • Acted as the only tutor for a class of 102 students </ul>
-                        <ul> • Organized & delivered exam review sessions </ul>
-                        <ul> • <a href="https://docs.google.com/document/d/19qqA9w_MB4qu5dmIukAMyIEjOxxspSN2wkZRebCLt68/edit?usp=sharing">Click here for tutor evaluations</a> </ul>
+                        <ul> • Created and deployed a web application that stored and served software documentation from a central location within Garmin Aviation </ul>
+                        <ul> • Worked with a mentor to fix bugs and add features to internal software that simulates input and output data on different aircraft. </ul>
                         </p>
                     </div>
                     <div class="col-md-3 year">
-                        <p>Fall 2016</p>
+                        <p>March 2017 - Present</p>
                     </div>
                 </div><!--Job 1 end-->
 
@@ -183,8 +177,8 @@
 
                 <div class="row">
                     <div class="col-md-9">
-                        <h4>Intern, Web Application Software Engineer</h4>
-                        <p class="sub"><a href="http://www.conocophillips.com">ConocoPhillips</a>
+                        <h4>ResNet Technician</h4>
+                        <p class="sub"><a href="http://housing.k-state.edu/">Kansas State University Housing and Dining</a>
                         </p>
                         <ul>• Designed and implemented the front-end + back-end of a web app now used daily</ul>
                         <ul>• Developed a Python REST API that will be reused due to its modularity</ul>
@@ -192,27 +186,9 @@
                         <ul>• 1 of 3 interns selected to host user group and present Python frameworks to 50+ developers</ul>
                     </div>
                     <div class="year col-md-3">
-                        <p>Summer 2016</p>
+                        <p>August 2015 - March 2017</p>
                     </div>
                 </div><!--Job 2 end-->
-
-                <hr>
-
-                <div class="row">
-                    <div class="col-md-9">
-                        <h4>Google Student Ambassador</h4>
-                        <p class="sub"><a href="https://www.google.com/edu/students/">Google Inc.</a>
-                        </p>
-                        <ul>• Hosted 8 campus events & maintained relationship between Google + K-State</ul>
-                        <ul>• <a href="https://www.youtube.com/watch?v=kee1oGKyBYQ">Trained at global company HQ in Mountain View, CA</a></ul>
-                        <ul>• <a href="{{ url_for('talks') }}">Part of 7% of US GSAs selected to work with Android team for demonstrating “dedication, out-of-the-box thinking, and commitment”</a></ul>
-                        <ul>• Raised "Google at K-State" social media presence by 622% in first five months</ul>
-                        <ul>• 1 of 7 GSAs to represent Google at <a href="https://events.educause.edu/annual-conference/2015">conference containing 7,000+ higher education IT professionals</a></ul>
-                    </div>
-                    <div class="year col-md-3">
-                        <p>2015 - 2016</p>
-                    </div>
-                </div><!--Job 3 end-->
             </div><!--Job experiences end-->
         </div><!--Job experiences end-->
     </div><!--left end-->
@@ -245,7 +221,13 @@
                         <span class="sr-only">80% Complete</span>
                     </div>
                 </div><!--skill end-->
-                <p>HTML5</p>
+                <p>Git & Github</p>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+                        <span class="sr-only">75% Complete</span>
+                    </div>
+                </div><!--skill end-->
+                <p>Node.js</p>
                 <div class="progress">
                     <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
                         <span class="sr-only">70% Complete</span>
@@ -255,12 +237,6 @@
                 <div class="progress">
                     <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
                         <span class="sr-only">70% Complete</span>
-                    </div>
-                </div><!--skill end-->
-                <p>Python</p>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-                        <span class="sr-only">70% Complete (warning)</span>
                     </div>
                 </div><!--skill end-->
                 <p>CSS3</p>
@@ -275,13 +251,13 @@
                         <span class="sr-only">60% Complete (warning)</span>
                     </div>
                 </div><!--skill end-->
-                <p>Node.js</p>
+                <p>Python</p>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                        <span class="sr-only">40% Complete (danger)</span>
+                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                        <span class="sr-only">50% Complete (warning)</span>
                     </div>
                 </div><!--skill end-->
-                <p>Photoshop</p>
+                <p>HTML5</p>
                 <div class="progress">
                     <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
                         <span class="sr-only">40% Complete (danger)</span>
@@ -291,25 +267,6 @@
         </div><!--tech skills end-->
 
         <hr>
-        <div class="row mobmid">
-            <div class="col-sm-1 col-md-2">
-                <span class="secicon fa fa-trophy"></span>
-            </div><!--icon end-->
-            <div class="col-sm-11 col-md-10 ">
-                <h3>Awards</h3>
-                <div class="award">
-                    <h4>Best Android Event</h4>
-                    <p class="sub"><a href="https://www.android.com/">Google Android Team</a></p>
-                    <p>Awarded for being in the top 25% of US Google Student Ambassador Android events in the country.</p>
-                </div>
-                <!--1st award end-->
-                <div class="award">
-                    <h4>Dean's List</h4>
-                    <p class="sub"><a href="http://www.engg.ksu.edu/">Kansas State College of Engineering</a></p>
-                    <p>Awarded 3 different semesters for achieving academic honors (Fall 2016, Spring 2015, Fall 2014).</p>
-                </div><!--1st award end-->
-            </div><!--awards end-->
-        </div>
 
 
     </div><!--tech skills end-->
