--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,11 @@
         <!-- Navbar (Large Screens) -->
         <div class="w3-top w3-hide-small" style="color:white">
             <ul class="w3-navbar" id="myNav">
-                <li><a href="index.html" class="w3-padding-large">HOME</a></li>
-                <li><a href="about.html" class="w3-padding-large">ABOUT ME</a></li>
-                <li><a href="resume.html" class="w3-padding-large">RESUME</a></li>
-                <li><a href="blog.html" class="w3-padding-large">BLOG</a></li>
-                <li><a href="contact.html" class="w3-padding-large">CONTACT</a></li>
+                <li><a href="{{ url_for('home') }}" class="w3-padding-large">HOME</a></li>
+                <li><a href="{{ url_for('about') }}" class="w3-padding-large">ABOUT ME</a></li>
+                <li><a href="{{ url_for('resume') }}" class="w3-padding-large">RESUME</a></li>
+                <li><a href="{{ url_for('blog') }}" class="w3-padding-large">BLOG</a></li>
+                <li><a href="{{ url_for('contact') }}" class="w3-padding-large">CONTACT</a></li>
             </ul>
         </div>
 
