fixed resume. added pdf link.

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -165,10 +165,9 @@
                         <h4>ResNet Technician</h4>
                         <p class="sub"><a href="http://housing.k-state.edu/">Kansas State University Housing and Dining</a>
                         </p>
-                        <ul>• Designed and implemented the front-end + back-end of a web app now used daily</ul>
-                        <ul>• Developed a Python REST API that will be reused due to its modularity</ul>
-                        <ul>• Configured Raspberry Pis to fetch and display data on a dashboard</ul>
-                        <ul>• 1 of 3 interns selected to host user group and present Python frameworks to 50+ developers</ul>
+                        <ul>• Provided assistance to customers through phone, walk-in support, and remotely.</ul>
+                        <ul>• Researched and provided multiple solutions to technology requests and problems.</ul>
+                        <ul>• Supervised the use of various applications to diagnose and troubleshoot computer issues.</ul>
                     </div>
                     <div class="year col-md-3">
                         <p>August 2015 - March 2017</p>
