--- a/templates/about.html
+++ b/templates/about.html
@@ -41,13 +41,23 @@
     </style>
 </head>
     <body>
-        <div class="w3-top" style="color:black">
+        <div class="w3-top w3-hide-small" style="color:black">
             <ul class="w3-navbar" id="myNav">
                 <li><a href="{{ url_for('home') }}" class="w3-padding-large">HOME</a></li>
                 <li class="w3-hide-small w3-disabled"><a href="{{ url_for('about') }}" class="w3-padding-large">ABOUT ME</a></li>
                 <li class="w3-hide-small"><a href="{{ url_for('resume') }}" class="w3-padding-large">RESUME</a></li>
                 <li class="w3-hide-small"><a href="{{ url_for('blog') }}" class="w3-padding-large">BLOG</a></li>
                 <li class="w3-hide-small"><a href="{{ url_for('contact') }}" class="w3-padding-large">CONTACT</a></li>
+            </ul>
+        </div>
+
+        <div class="w3-top w3-hide-large w3-hide-medium" style="color:white">
+            <ul class="w3-navbar" id="myNavSmall">
+                <li><a href="{{ url_for('home') }}" class="w3-padding-large">HOME</a></li>
+                <li><a href="{{ url_for('about') }}" class="w3-padding-large">ABOUT ME</a></li>
+                <li><a href="{{ url_for('resume') }}" class="w3-padding-large">RESUME</a></li>
+                <li><a href="{{ url_for('blog') }}" class="w3-padding-large">BLOG</a></li>
+                <li><a href="{{ url_for('contact') }}" class="w3-padding-large">CONTACT</a></li>
             </ul>
         </div>
 
