Fixed a few more mistakes.

--- a/templates/about.html
+++ b/templates/about.html
@@ -51,7 +51,7 @@
             </ul>
         </div>
 
-        <div class="w3-top w3-hide-large w3-hide-medium" style="color:white">
+        <div class="w3-top-static w3-hide-large w3-hide-medium" style="color:white">
             <ul class="w3-navbar" id="myNavSmall">
                 <li><a href="{{ url_for('home') }}" class="w3-padding-large">HOME</a></li>
                 <li><a href="{{ url_for('about') }}" class="w3-padding-large">ABOUT ME</a></li>
@@ -121,7 +121,7 @@
                During this phase, my computer skills quietly improved without me realizing it. I had always had a knack for technology and I should've just chosen to major in a technology field from
                the beginning, but I digress.</p>
             <h4>Abridged History: 12 Years - 20 Years</h4>
-            <p>After seven years, the family once again packed up and moved to where they currently reside, in Shawnee Kansas. As you can imagine, moving when I was 11 years old was basically the end of
+            <p>After seven years, the family once again packed up and moved to where they currently reside, in Shawnee, Kansas. As you can imagine, moving when I was 11 years old was basically the end of
                the world. "I'll lose all of my friends!" "I don't want to leave, I like it here!" were among the phrases I spewed when my parents broke the news to me. Little did I know that the move here would
                be one of the better things that happens in my life.</p>
             <p>We moved to Kansas shortly before my 12th birthday. My dad had already been down here working at his new job, so we had a house that was ready for us when we got here. "Ready" as in, we had one,
