--- a/templates/resume.html
+++ b/templates/resume.html
@@ -69,7 +69,7 @@
     </div>
 
     <!-- Navbar (Small Screens) -->
-    <div class="w3-top-static w3-hide-large w3-hide-medium" style="color:white">
+    <div class="w3-top-static w3-hide-large w3-hide-medium" style="color:grey">
         <ul class="w3-navbar" id="myNavSmall">
             <li><a href="{{ url_for('home') }}" class="w3-padding-large">HOME</a></li>
             <li><a href="{{ url_for('about') }}" class="w3-padding-large">ABOUT ME</a></li>
