resume link works correctly.

--- a/templates/about.html
+++ b/templates/about.html
@@ -128,7 +128,9 @@
                 sans furniture. The movers followed us down and we had our furniture from Iowa here in a matter of a few days. Let the unpacking begin! (Speaking of, I'm 90% sure there's still boxes that are
                 packed away in the basement...)</p>
             <p>My experiences here in Kansas were very very different from what I knew in Iowa. I actually had a neighborhood full of kids my age to hang out with here. I met one of my best friends, Andrew Wesp,
-               very early on in my time living here. After six very uneventful years attending middle and high school, I graduated and spent the summer working at Jimmy John's in preparation for the college life.
+               very early on in my time living here. Shortly before the end of seventh grade, my youngest brother was born. I was immediately attached to the kid and vice versa. If he was unable to nap, I would
+                sit in the rocking chair with him and rock him until he fell asleep. I seemed to be the only one who could ever pull this off, so I was a hot commodity in the house.</p>
+            <p>After six very uneventful years attending middle and high school, I graduated and spent the summer working at Jimmy John's in preparation for the college life.
                I chose very quickly to attend Kansas State because of the awesome scholarship opportunity they offered me. I mean, who can pass up money for school when it's so expensive?! I began my college
                career as a Computer Engineering major, since I enjoyed working with computers. Little did I know that this meant hardware too, which I did not enjoy working with. I took my first programming class
                my second semester Freshman year and loved it. It clicked very quickly with me, and I could see the end results in the programs that I wrote. Why wouldn't I love it?
