--- a/templates/resume.html
+++ b/templates/resume.html
@@ -105,7 +105,7 @@
                         </li>
                         <li><a href="mailto:tyler.snielson@gmail.com.com"><span class="social fa fa-envelope-o"></span>tyler.snielson@gmail.com</a>
                         </li>
-                        <li><a href="{{ url_for('full_resume') }}"><span class="social fa fa-file-text"></span>Link to full resume</a></li>
+                        <li><a href="full_resume.pdf"><span class="social fa fa-file-text"></span>Link to full resume</a></li>
                     </ul>
                 </div><!-- social 1st col end-->
                 <div class="col-sm-offset-2">
