broken link on homepage fixed.

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="w3-rest m8 l9 w3-light-grey" style="top:20px; right:-50px; left:-5px; position:relative">
                         <h1> <b>  A Little About Me </b> </h1>
-                        <p>Hello, my name is Tyler Nielson. I am currently a senior at Kansas State University who is studying Software Engineering. I am set to graduate in May 2018 after four great years of schooling. I enjoy expanding my knowledge about programming and spend a lot of my time exploring different languages. If you want to learn more about me, visit my <a href="about.html">about me</a> page</p>
+                        <p>Hello, my name is Tyler Nielson. I am currently a senior at Kansas State University who is studying Software Engineering. I am set to graduate in May 2018 after four great years of schooling. I enjoy expanding my knowledge about programming and spend a lot of my time exploring different languages. If you want to learn more about me, visit my <a href="{{ url_for('about') }}">about me</a> page</p>
                     </div>
                 </div>
 
@@ -70,7 +70,7 @@
             <div class="w3-hide-large w3-center w3-hide-medium">
                 <img src="static/css/images/tyler.jpeg" width="75%">
                 <h2> <b> A Little About Me </b> </h2>
-                <p>Hello, my name is Tyler Nielson. I am currently a senior at Kansas State University who is studying Software Engineering. I am set to graduate in May 2018 after four great years of schooling. I enjoy expanding my knowledge about programming and spend a lot of my time exploring different languages. If you want to learn more about me, visit my <a href="about.html">about me</a> page</p>
+                <p>Hello, my name is Tyler Nielson. I am currently a senior at Kansas State University who is studying Software Engineering. I am set to graduate in May 2018 after four great years of schooling. I enjoy expanding my knowledge about programming and spend a lot of my time exploring different languages. If you want to learn more about me, visit my <a href="{{ url_for('about') }}">about me</a> page</p>
             </div>
         </div>
 
