Added new job to resume. Updated resume pdf.

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -153,7 +153,25 @@
             </div><!--icon end-->
             <div class="col-sm-11">
                 <h3>Job Experience</h3>
-                <div class="row">
+                
+				<div class="row">
+                    <div class="col-md-9">
+                        <h4>Computer Support Technician</h4>
+                        <p class="sub"><a href="http://www.k-state.edu/economics/">Kansas State University Department of Economics</a>
+                        </p>
+                        <p>
+                        <ul> • Troubleshoot and perform maintenance on desktop computers and printers </ul>
+                        <ul> • Work to maintain and update the Department of Economics webpages </ul>
+                        </p>
+                    </div>
+                    <div class="col-md-3 year">
+                        <p>September 2017 - Present</p>
+                    </div>
+                </div><!--Job 1 end-->
+				
+				<hr>
+				
+				<div class="row">
                     <div class="col-md-9">
                         <h4>Software Engineer Intern​</h4>
                         <p class="sub"><a href="https://www.garmin.com">Garmin International</a>
@@ -166,7 +184,7 @@
                     <div class="col-md-3 year">
                         <p>March 2017 - August 2017</p>
                     </div>
-                </div><!--Job 1 end-->
+                </div><!--Job 2 end-->
 
                 <hr>
 
@@ -182,7 +200,7 @@
                     <div class="year col-md-3">
                         <p>August 2015 - March 2017</p>
                     </div>
-                </div><!--Job 2 end-->
+                </div><!--Job 3 end-->
             </div><!--Job experiences end-->
         </div><!--Job experiences end-->
     </div><!--left end-->
